libinput: Fix Device::serializeMatrix

QMatrix4x4's ctor accepts data in row-major order, but constData() returns column-major order

This means that serialize and deserialize are inconsistent

Fix serialize to also work on row-major order

BUG: 521464